<resources>
    <string name="app_name">suitCaseApp</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_sign_up_below">Don\'t have an account? Sign Up below.</string>
    <string name="type_your_password">Type your password</string>
    <string name="emailResetTxt">Email</string>
    <string name="submit">Submit</string>
    <string name="type_your_email">Type your email</string>
    <string name="passResetText">Enter your email address and we\'ll send you an email to reset your password</string>
    <string name="welcome">Suit Case - Holidays</string>
    <string name="holiday_title">Edit Item</string>
    <string name="add_new_holiday">Add New Item</string>
    <string name="invalid_email_or_password">Invalid email or password format!</string>
    <string name="email_is_not_verified">Email is not verified</string>
    <string name="logo">Logo</string>
    <string name="select_image">Select Image</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="email_sent_to_reset_your_password">Email sent to reset your password</string>
    <string name="email_not_sent">Email not sent</string>
    <string name="invalid_email_or_password_format">Invalid email or password format</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="email_already_exists">Email already exists.</string>
    <string name="registered_successfully_but_failed_to_send_verification_email">Registered successfully but Failed to send verification email.</string>
    <string name="registered_successfully_and_verification_email_sent">Registered successfully and Verification email sent.</string>
    <string name="please_fill_in_all_the_fields">Please fill in all the fields.</string>
    <string name="failed_to_update_holiday">Failed to update holiday</string>
    <string name="failed_to_delete_holiday">Failed to delete holiday</string>
    <string name="price">Price</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
</resources>