<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/appLogoSignIn"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp" />

    <TextView
        android:id="@+id/forgotPassTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/appLogoSignIn"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="-61dp"
        android:text="@string/passResetText" />

    <EditText
        android:id="@+id/emailResetText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotPassTxt"
        android:layout_marginTop="81dp"
        android:autofillHints="Enter your email"
        android:hint="@string/emailResetTxt"
        android:inputType="text"
        tools:ignore="TextFields" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailResetText"
        android:layout_marginTop="10dp"
        android:text="@string/submit" />
</RelativeLayout>
