<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HolidayDetails">

    <RelativeLayout
        android:id="@+id/title_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/SaveNotes"
            android:layout_width="65dp"
            android:layout_height="55dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:importantForAccessibility="no"
            android:src="@drawable/baseline_check_24"
            app:tint="@color/blue" />

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="94dp"
            android:layout_height="43dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/icon_logo"
            android:contentDescription="@string/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="14dp"
            android:text="@string/add_new_holiday"
            android:textColor="@color/blue"
            android:textSize="32sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar_layout"
        android:layout_marginVertical="26dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/notesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:hint="@string/holiday_title"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/notesDescription"
            android:layout_width="match_parent"
            android:layout_height="152dp"
            android:layout_marginVertical="8dp"
            android:gravity="top"
            android:hint="Content"
            android:minLines="15"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/chkItemsPurchased"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="Items Purchased"
            android:textSize="20sp" />

        <Button
            android:id="@+id/selectImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Select Image" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/baseline_hide_image_24" />

        <fragment
            android:id="@+id/mapContainer"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

    </LinearLayout>

</RelativeLayout>